# nix_workshop_examples

./: README.md  pinning.nix
01_cowsay_env/: myapp.nix
02_boost_env/: CMakeLists.txt  boost.cc  boost.nix
03_cowsay_package/: myapp.py  myapp_v1.nix  myapp_v2.nix  myapp_v3.nix  shell.nix
04_benchmark/: bench.nix  multibench_v1.nix  multibench_v2.nix
05_cross/: advanced.nix  simple.nix
